--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,87 @@
-﻿altair==5.3.0
-attrs==23.2.0
-blinker==1.7.0
-cachetools==5.3.3
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-contourpy==1.2.0
-cycler==0.12.1
+altair==4.1.0
+argon2-cffi==20.1.0
+astor==0.8.1
+async-generator==1.10
+attrs==20.3.0
+backcall==0.2.0
+base58==2.1.0
+bleach==3.2.2
+blinker==1.4
+cachetools==4.2.0
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
+click==7.1.2
+colorama==0.4.4
 decorator==4.4.2
-Flask==3.0.0
-Flask-Login==0.6.3
-Flask-SQLAlchemy==3.1.1
-fonttools==4.47.0
-gitdb==4.0.11
-GitPython==3.1.43
-greenlet==3.0.3
-idna==3.6
-imageio==2.34.0
-imageio-ffmpeg==0.4.9
-imutils==0.5.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-jsonschema==4.22.0
-jsonschema-specifications==2023.12.1
-kiwisolver==1.4.5
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.8.2
-mdurl==0.1.2
-moviepy==1.0.3
-numpy==1.26.2
-opencv-contrib-python==4.8.1.78
-opencv-python==4.8.1.78
-packaging==23.2
-pandas==2.1.4
-Pillow==6.2.0
-proglog==0.1.10
-protobuf==4.25.3
-pyarrow==16.1.0
-pydeck==0.9.1
-pygame==2.5.2
-Pygments==2.18.0
-pyparsing==3.1.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
-referencing==0.35.1
-requests==2.31.0
-rich==13.7.1
-rpds-py==0.18.1
-setuptools==69.1.1
-six==1.16.0
-smmap==5.0.1
-SQLAlchemy==2.0.25
-streamlit==1.24.1
-tenacity==8.3.0
-tk==0.1.0
+defusedxml==0.6.0
+entrypoints==0.3
+gitdb==4.0.5
+GitPython==3.1.12
+idna==2.10
+importlib-metadata==3.4.0
+ipykernel==5.4.3
+ipython==7.19.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+jedi==0.18.0
+Jinja2==2.11.2
+joblib==1.0.0
+jsonschema==3.2.0
+jupyter-client==6.1.11
+jupyter-core==4.7.0
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+MarkupSafe==1.1.1
+mistune==0.8.4
+nbclient==0.5.1
+nbconvert==6.0.7
+nbformat==5.1.2
+nest-asyncio==1.4.3
+notebook==6.2.0
+numpy==1.19.5
+packaging==20.8
+pandas==1.2.1
+pandocfilters==1.4.3
+parso==0.8.1
+pickleshare==0.7.5
+Pillow==8.1.0
+prometheus-client==0.9.0
+prompt-toolkit==3.0.11
+protobuf==3.14.0
+pyarrow==2.0.0
+pycparser==2.20
+pydeck==0.5.0
+Pygments==2.7.4
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+pytz==2020.5
+# pywin32==300
+pywinpty==0.5.7
+pyzmq==21.0.1
+requests==2.25.1
+scikit-learn==0.24.1
+scipy==1.6.0
+Send2Trash==1.5.0
+six==1.15.0
+sklearn==0.0
+smmap==3.0.4
+streamlit==0.75.0
+terminado==0.9.2
+testpath==0.4.4
+threadpoolctl==2.1.0
 toml==0.10.2
-toolz==0.12.1
-tornado==6.4
-tqdm==4.66.2
-typing_extensions==4.9.0
-tzdata==2023.3
-urllib3==2.2.1
-watchdog==4.0.0
-Werkzeug==3.0.1
+toolz==0.11.1
+tornado==6.1
+traitlets==5.0.5
+typing-extensions==3.7.4.3
+tzlocal==2.1
+urllib3==1.26.2
+validators==0.18.2
+watchdog==1.0.2
+wcwidth==0.2.5
+webencodings==0.5.1
+widgetsnbextension==3.5.1
+wincertstore==0.2
+zipp==3.4.0
