--- a/requirements.txt
+++ b/requirements.txt
@@ -43,7 +43,7 @@ pydeck==0.9.1
 pygame==2.5.2
 Pygments==2.18.0
 pyparsing==3.1.1
-Python >=3.7,<3.11
+python==3.12.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
 referencing==0.35.1
